trunk/Archive2/55/38fa8627aeea97/output
main.cpp:13:14: error: expected expression
  int *p=arg[];
             ^
main.cpp:15:21: error: 'break' statement not in loop or switch statement
  if (length>len) { break; }
                    ^
2 errors generated.
